<resources>
    <string name="app_name">Notes</string>
    <string name="enter_title">Введите название заметки</string>
    <string name="enter_description">Введите описание</string>
    <string name="text_priority">Выберите приоритет</string>
    <string name="priority_1">Очень срочно</string>
    <string name="priority_2">Важно</string>
    <string name="priority_3">Не срочно</string>
    <string name="text_view_main">Создание заметки</string>
    <string name="button_create_note">Создать заметку</string>
    <string name="toast_fields">Заполните все поля</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="button_edit_note">Изменить заметку</string>
    <string name="text_view_edit_note">Редактирование заметки</string>
    <string name="sort_data">по дате добавления</string>
    <string name="sort_priority">по приоритету</string>
    <string name="sort_title">по названию</string>
</resources>