<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditNoteActivity">

    <EditText
        android:id="@+id/editTextTitleEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMainEdit"
        app:layout_goneMarginEnd="10dp" />

    <EditText
        android:id="@+id/editTextDescriptionEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_description"
        android:textSize="18sp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitleEdit"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spinnerPriorityEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriorityEdit" />

    <TextView
        android:id="@+id/textViewPriorityEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescriptionEdit"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/textMainEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_view_edit_note"
        android:textColor="@color/text_grey"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/buttonEditNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_edit_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPriorityEdit"
        android:backgroundTint="@color/blue"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:textSize="16sp"
        android:onClick="onClickEditNote"/>
</androidx.constraintlayout.widget.ConstraintLayout>